--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,6 @@ body {
   background-color: #fcfcfc;
   font-family: 'Noto Sans JP', sans-serif;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
