Add filters component

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,9 +2,10 @@
     <h1>Design Avenue</h1>
 </div>
 <div id="navbar">
-    <a href="#frames">Frames</a>
+    <a href="/">Home</a>
+    <a href="browse">Frames</a>
     <a href="#Collection">New Collection</a>
     <a href="#Walls">Walls</a>
     <a href="#Reviews">Customers' Reviews</a>
-    <a href="/e-commerce/custom-design">Custom Design</a>
+    <a href="custom-design">Custom Design</a>
 </div>
