Add filters functionality Add reset button for filters

--- a/src/app/filters/filters.component.html
+++ b/src/app/filters/filters.component.html
@@ -1,6 +1,7 @@
 <div class="main-filters">
     <div class="filters-cont">
-        <div class="dropdown" *ngFor="let filter of filters; let indx=index;" [ngClass]="{selected:filter.selected.length>0}">
+        <div class="dropdown" *ngFor="let filter of filters; let indx=index;"
+            [ngClass]="{selected:filter.selected.length>0}">
             <span class=" dropdown-title">{{filter.selected.length>0?filter.selected:filter.title}}</span>
             <div class="dropdown-content">
                 <div class="dropdown-item" *ngFor="let option of filter.options" (click)="selectOption(indx, option)"
@@ -9,5 +10,6 @@
                 </div>
             </div>
         </div>
+        <div><a class="dropdown clear-selected-btn" (click)="clearSelected()">Reset <i class="fas fa-times"></i></a></div>
     </div>
 </div>
