--- a/src/app/browse/browse.component.css
+++ b/src/app/browse/browse.component.css
@@ -92,3 +92,11 @@ a {
   font-weight: 1000;
   color: rgb(56, 56, 56);
 }
+
+
+@media (max-width: 800px) {
+  .product-item {
+    margin: 10px;
+  }
+
+}
