--- a/src/app/browse/browse.component.html
+++ b/src/app/browse/browse.component.html
@@ -1,14 +1,17 @@
 <div class="main">
-    <app-filters [filters]="filters"></app-filters>
+    <app-filters [filters]="filters" (filtersChange)="applyFilters()"></app-filters>
     <div class="product-list">
-        <div class="product-item-cont" *ngFor="let item of items" [ngStyle]="rowNum()">
-            <div class="product-item">
-                <div class="product-img-cont"><img src="{{item.imageUrl}}" class="product-img"></div>
-                <div class="product-details">
-                    <div class="product-name">{{item.title}}</div>
-                    <div class="product-price">EGP {{item.price}}</div>
+        <ng-container *ngFor="let item of items">
+
+            <div class="product-item-cont" [ngStyle]="rowNum()" *ngIf="item.isShown">
+                <div class="product-item">
+                    <div class="product-img-cont"><img src="{{item.imageUrl}}" class="product-img"></div>
+                    <div class="product-details">
+                        <div class="product-name">{{item.title}}</div>
+                        <div class="product-price">EGP {{item.price}}</div>
+                    </div>
                 </div>
             </div>
-        </div>
+        </ng-container>
     </div>
 </div>
