--- a/src/app/custom-design/custom-design.component.css
+++ b/src/app/custom-design/custom-design.component.css
@@ -134,3 +134,21 @@
   color: whitesmoke;
 
 }
+
+@media (max-width: 1000px) {
+
+  .blockquote {
+    padding: 10px;
+    margin: 10px;
+  }
+
+  .customise {
+    flex-direction: column;
+  }
+
+  .frame,
+  .border-filter {
+    width: 300px;
+    height: 450px;
+  }
+}
