--- a/src/app/filters/filters.component.css
+++ b/src/app/filters/filters.component.css
@@ -6,10 +6,10 @@
   justify-content: flex-start;
   align-items: center;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  padding: 10px;
-  font-size: 14px;
+  padding: 8px;
+  font-size: 12px;
   font-family: 'Cutive Mono', monospace;
-  background: #FAFAFA
+  background: #fafafad5
 }
 
 .dropdown {
@@ -26,7 +26,7 @@
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  min-width: 120px;
+  min-width: 110px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
@@ -45,7 +45,7 @@
 .dropdown-item {
   padding: 10px;
   border-bottom: 1px solid rgba(184, 184, 184, 0.726);
-  color: black;
+  color: rgb(58, 58, 58);
 }
 
 .dropdown-item:hover {
@@ -59,5 +59,10 @@
 }
 
 .dropdown-title {
-  font-size: 15px;
+  font-size: 13px;
+}
+
+.clear-selected-btn {
+  border: 0;
+  cursor: pointer;
 }
