--- a/src/app/browse/browse.component.html
+++ b/src/app/browse/browse.component.html
@@ -1,11 +1,10 @@
 <div class="main">
     <app-filters [filters]="filters" (filtersChange)="applyFilters()"></app-filters>
     <div class="product-list">
-        <ng-container *ngFor="let item of items">
-
+        <ng-container *ngFor="let item of items;let indx = index">
             <div class="product-item-cont" [ngStyle]="rowNum()" *ngIf="item.isShown">
                 <div class="product-item">
-                    <div class="product-img-cont"><img src="{{item.imageUrl}}" class="product-img"></div>
+                    <div class="product-img-cont" (click)="redirectViewPage(indx)"><img src="{{item.imageUrl}}" class="product-img"></div>
                     <div class="product-details">
                         <div class="product-name">{{item.title}}</div>
                         <div class="product-price">EGP {{item.price}}</div>
