--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -65,7 +65,13 @@
         </mat-carousel-slide>
     </mat-carousel>
     <div class="carousel-btn">
-        <a href="#browse" class="browse-btn">Browse Frames</a></div>
+        <a href="#browse" class="browse-btn">Our Collection</a></div>
+</div>
+
+<div class="our-collection">
+    <div class="wallsets"><a href="#browse" class="browse-btn">Frames</a></div>
+    <div class="frames"><a href="#browse" class="browse-btn">Wallsets</a></div>
+    <div class="art"><a href="#browse" class="browse-btn">Art</a></div>
 </div>
 
 <div class="owner">
