--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -156,6 +156,7 @@ h3 {
   /* height: 100%; */
   flex: 1;
   width: 100%;
+  padding-bottom: 10px;
 }
 
 .best-seller-img {
@@ -251,62 +252,13 @@ h3 {
   background-image: url('../../assets/images/category-kids1.jpg');
 }
 
-.owner {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  background: #fcfcfc;
-  margin: 20px;
-  border: 5px solid black;
-  background: -webkit-linear-gradient(left, black 50%, white 0%);
+.carousel-cont {
+  background: black;
 }
 
-
-.owner-img {
-  background-attachment: scroll;
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
-  min-height: 80vh;
-  border-radius: 5px;
-  width: 100%;
-  background-image: url('../../assets/images/heba-img.PNG');
-
-}
-
-.owner-info {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  color: white;
-}
-
-.owner-info p {
-  text-align: center
-}
-
-.footer {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  background-color: rgb(235, 235, 235);
-  padding: 30px;
-}
-
-.footer div {
-  flex: 1;
-}
-
-.footer div a {
-  color: rgb(179, 179, 179);
-
-}
-
-.footer div a:hover {
-  color: black;
+.carousell {
+  display: block;
+  padding: 20px;
 }
 
 .carousel-btn {
@@ -354,6 +306,9 @@ h3 {
 .frames {
   background-image: url('https://images.unsplash.com/photo-1587798074130-015f7eb202ed?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1049&q=80');
 }
+
+
+
 
 /* Responsive layout - makes a one column-layout instead of a two-column layout */
 @media (max-width: 800px) {
