--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -54,16 +54,18 @@
     </div>
 </div>
 
-<div>
+<div class="carousel-cont">
     <div class="categories">Frames for every room, every house and every taste</div>
-    <mat-carousel color="primary" timings="250ms ease-in" [autoplay]="true" [interval]="2000" [proportion]="40"
-        [loop]="true" [hideArrows]="false" [hideIndicators]="false" [useKeyboard]="false" [useMouseWheel]="false"
-        orientation="ltr">
+    <div class="carousell">
+        <mat-carousel color="primary" timings="250ms ease-in" [autoplay]="true" [interval]="2000" [proportion]="40"
+            [loop]="true" [hideArrows]="false" [hideIndicators]="false" [useKeyboard]="false" [useMouseWheel]="false"
+            orientation="ltr">
 
-        <mat-carousel-slide *ngFor="let slide of slides" [image]="slide" overlayColor="#00000040" [hideOverlay]="false"
-            #matCarouselSlide>
-        </mat-carousel-slide>
-    </mat-carousel>
+            <mat-carousel-slide *ngFor="let slide of slides" [image]="slide" overlayColor="#00000040"
+                [hideOverlay]="false" #matCarouselSlide>
+            </mat-carousel-slide>
+        </mat-carousel>
+    </div>
     <div class="carousel-btn">
         <a href="#browse" class="browse-btn">Our Collection</a></div>
 </div>
@@ -72,24 +74,4 @@
     <div class="wallsets"><a href="#browse" class="browse-btn">Frames</a></div>
     <div class="frames"><a href="#browse" class="browse-btn">Wallsets</a></div>
     <div class="art"><a href="#browse" class="browse-btn">Art</a></div>
-</div>
-
-<div class="owner">
-    <div class="owner-info">
-        <h1>Design Avenue Owner</h1>
-        <p>Hello, I'm Heba, a Business adminstration graduate and a marketing enthusiast who believes frames can
-            change
-            moods and build dreams.</p>
-    </div>
-    <div class="owner-img">
-
-    </div>
-</div>
-
-<div class="footer">
-    <div><a href="https://www.instagram.com/designnavenue/?hl=en"><i class="fab fa-instagram fa-2x"></i></a></div>
-    <div><a href="#facebook"><i class="fab fa-facebook-square fa-2x"></i></a></div>
-
-    <div class="newsletter"><a href=""><i class="fas fa-newspaper fa-2x"></i></a></div>
-
 </div>
