--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -24,8 +24,7 @@
 }
 
 #navbar a {
-  padding: 15px;
-  margin: 0 10px;
+  padding: 15px 25px;
   background-size: 100% 200%;
   background-image: linear-gradient(to bottom, rgb(250, 250, 250) 50%, black 50%);
   text-decoration: none;
