Create cart design UI

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,7 +2,7 @@
     <h1>Design Avenue</h1>
 </div>
 <div id="navbar">
-    <a href="/">Home</a>
+    <a href="">Home</a>
     <a href="browse">Frames</a>
     <a href="#Collection">New Collection</a>
     <a href="#Walls">Walls</a>
