--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,8 @@
 <div class="logo">
+    <a href="cart" class="navbar-cart hidden-element"><i class="fas fa-shopping-bag fa-2x"></i></a>
+
     <h1>Design Avenue</h1>
+    <a href="cart" class="navbar-cart"><i class="fas fa-shopping-bag fa-2x"></i></a>
 </div>
 <div id="navbar">
     <a href="">Home</a>
