--- a/src/app/cart/cart.component.css
+++ b/src/app/cart/cart.component.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap');
+
 .main-cont {
   display: flex;
   flex-direction: column;
+  font-family: 'Work Sans', sans-serif;
 }
 
 .cart-header {
@@ -32,7 +35,7 @@
   padding: 20px;
   margin: 20px;
   height: 100px;
-  color: rgb(163, 163, 163);
+  color: rgb(124, 124, 124);
   background: white;
   border-radius: 5px;
 }
@@ -63,7 +66,8 @@
 }
 
 .cart-item-info-title {
-  font-weight: 500;
+  font-size: 17px;
+  font-weight: bold;
 }
 
 .cart-item-info-price {
