--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,10 +5,10 @@
     </div>
 
     <div class="footer-section">
-        <a href="about">About</a>
-        <a href="browse">Frames</a>
-        <a href="">Wallsets</a>
-        <a href="custom-design">Custom Design</a>
+        <a routerLink="about">About</a>
+        <a routerLink="browse">Frames</a>
+        <a routerLink="">Wallsets</a>
+        <a routerLink="custom-design">Custom Design</a>
     </div>
     <div class="footer-section">
         <div class="contact-us"><a href="">Contact us</a></div>
