--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -5,7 +5,7 @@
   background-color: rgb(250, 250, 250);
   color: rgb(0, 0, 0);
   font-family: 'Dancing Script', cursive;
-  z-index: 5;
+  z-index: 100;
   margin: auto;
 }
 
@@ -17,6 +17,7 @@
   margin-left: auto;
   padding: 20px;
   color: rgb(204, 204, 204);
+  text-decoration: none;
 }
 
 .navbar-cart:hover {
@@ -35,7 +36,7 @@
   background-color: rgb(250, 250, 250);
   color: rgb(136, 136, 136);
   box-shadow: 0 3px 5px -2px rgba(0, 0, 0, .2);
-  z-index: 5;
+  z-index: 100;
 }
 
 #navbar a {
