--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,14 +1,14 @@
 <div class="logo">
-    <a href="cart" class="navbar-cart hidden-element"><i class="fas fa-shopping-bag fa-2x"></i></a>
+    <a routerLink="cart" class="navbar-cart hidden-element"><i class="fas fa-shopping-bag fa-2x"></i></a>
 
     <h1>Design Avenue</h1>
-    <a href="cart" class="navbar-cart"><i class="fas fa-shopping-bag fa-2x"></i></a>
+    <a routerLink="cart" class="navbar-cart">{{numberOfItemsInCart}} <i class="fas fa-shopping-bag fa-2x"></i></a>
 </div>
 <div id="navbar">
-    <a href="">Home</a>
-    <a href="browse">Frames</a>
-    <a href="#Collection">New Collection</a>
-    <a href="#Walls">Walls</a>
-    <a href="#Reviews">Customers' Reviews</a>
-    <a href="custom-design">Custom Design</a>
+    <a routerLink="">Home</a>
+    <a routerLink="browse">Frames</a>
+    <a routerLink="#Collection">New Collection</a>
+    <a routerLink="#Walls">Walls</a>
+    <a routerLink="#Reviews">Customers' Reviews</a>
+    <a routerLink="custom-design">Custom Design</a>
 </div>
