Refactor product service Calculate total price in cart

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -23,7 +23,7 @@
 
         <div class="cart-total" *ngIf="itemsInCart.length!==0">
             <div class="cart-total-price">
-                Total Price: 360 EGP
+                Total Price: {{totalPrice}} EGP
             </div>
             <div class="order-btn"><a href="">Order Now</a></div>
         </div>
