Create admin page Create edit/add product page

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -11,6 +11,7 @@
         <a routerLink="custom-design">Custom Design</a>
     </div>
     <div class="footer-section">
-        <div class="contact-us"><a href="">Contact us</a></div>
+        <a href="">Contact us</a>
+        <a routerLink="admin">Admin</a>
     </div>
 </div>
