--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,1 +1,41 @@
-<p>admin works!</p>
+<div class="main-cont container-fluid">
+
+    <div class="jumbotron">
+        <h3>Admin Page</h3>
+        <p>Customise your web application</p>
+    </div>
+    <div class="row">
+        <div class="view-products container">
+            <a class="btn btn-secondary m-1" routerLink="edit/-1">Add Product</a>
+
+            <div class="view-products-cont">
+
+                <table class="table table-striped">
+                    <thead class="thead-light">
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Title</th>
+                            <th scope="col">Category</th>
+                            <th scope="col">Price</th>
+                            <th scope="col">Image</th>
+                            <th scope="col">Edit/Remove</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let product of products;let indx=index">
+                            <th scope="row">{{indx}}</th>
+                            <td>{{product.title}}</td>
+                            <td>{{product.category}}</td>
+                            <td>{{product.price}}</td>
+                            <td><img class="view-products-table-image" src="{{product.imageUrl}}"></td>
+                            <td><a routerLink="./edit/{{indx}}"><i class="fas fa-edit"></i></a>
+                                <a (click)="removeProduct(indx)"><i class="fas fa-trash"></i></a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    <hr>
+</div>
