--- a/src/app/edit-product/edit-product.component.html
+++ b/src/app/edit-product/edit-product.component.html
@@ -1,54 +1,64 @@
 <div class="row">
     <div class="admin-product-form container">
         <div class="form-cont">
-            <h5>Add new Product</h5>
-            <form>
+            <h5>{{action}} Product</h5>
+            <form (ngSubmit)="submitForm()">
                 <div class="form-group">
                     <label for="product-title">Title</label>
-                    <input type="text" class="form-control" id="product-title" placeholder="Title">
+                    <input type="text" class="form-control" id="product-title" placeholder="Title"
+                        [(ngModel)]="item.title" name="item.title">
                 </div>
                 <div class="form-group">
                     <label for="product-description">Description</label>
-                    <input type="text" class="form-control" id="product-description" placeholder="Description">
+                    <input type="text" class="form-control" id="product-description" placeholder="Description"
+                        [(ngModel)]="item.description" name="item.description">
+                </div>
+                <div class="form-group">
+                    <label for="product-description">Material</label>
+                    <input type="text" class="form-control" id="product-material" placeholder="Material"
+                        [(ngModel)]="item.material" name="item.material">
                 </div>
                 <div class="form-group">
                     <label for="product-price">Price</label>
-                    <input type="number" class="form-control" id="product-price" placeholder="Price" min="0">
+                    <input type="number" class="form-control" id="product-price" placeholder="Price" min="0"
+                        [(ngModel)]="item.price" name="item.price">
                 </div>
                 <div class="form-group">
                     <label for="product-category">Category</label>
-                    <select class="form-control" id="product-category">
-                        <option>Frame</option>
-                        <option>Wallset</option>
-                        <option>Poster</option>
+                    <select class="form-control" id="product-category" name="item.category" [(ngModel)]="item.category">
+                        <option value="Frame">Frame</option>
+                        <option value="Wallset">Wallset</option>
+                        <option value="Poster">Poster</option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label for="product-color">Colors</label>
-                    <select multiple class="form-control" id="product-color">
-                        <option>Brown</option>
-                        <option>Black</option>
-                        <option>White</option>
-                        <option>Gray</option>
-                        <option>Wooden</option>
+                    <select multiple class="form-control" id="product-color" name="item.colors"
+                        [(ngModel)]="item.colors">
+                        <option value="Brown">Brown</option>
+                        <option value="Black">Black</option>
+                        <option value="White">White</option>
+                        <option value="Gray">Gray</option>
+                        <option value="Wooden">Wooden</option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label for="product-size">Sizes</label>
-                    <select multiple class="form-control" id="product-size">
-                        <option>20</option>
-                        <option>22</option>
-                        <option>25</option>
-                        <option>30</option>
+                    <select multiple class="form-control" id="product-size" name="item.sizes" [(ngModel)]="item.sizes">
+                        <option value="20">20</option>
+                        <option value="22">22</option>
+                        <option value="25">25</option>
+                        <option value="30">30</option>
                     </select>
+                </div>
+                <div class="form-group">
+                    <label for="product-imageUrl">Image Url</label>
+                    <input type="text" class="form-control" id="product-imageUrl" placeholder="Image Url"
+                        name="item.imageUrl" [(ngModel)]="item.imageUrl">
                 </div>
                 <div class="form-group">
                     <label for="product-image">Image</label>
                     <input type="file" class="form-control-file" id="product-image">
-                </div>
-                <div class="form-group">
-                    <label for="product-imageUrl">Image Url</label>
-                    <input type="text" class="form-control" id="product-imageUrl" placeholder="Image Url">
                 </div>
                 <button class="btn btn-primary" type="submit">{{action}} Product</button>
             </form>
