--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -13,5 +13,7 @@
     <div class="footer-section">
         <a href="">Contact us</a>
         <a routerLink="admin">Admin</a>
+        <a (click)="logout()">Logout</a>
+
     </div>
 </div>
